# flacofast-desktop

./: .dockerignore  .env.desktop.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  windows-release.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: config.rs  health.rs  jitter.rs  mod.rs  packet_loss.rs  ping.rs  wireguard.rs
src-tauri/src/models/: config.rs  history.rs  metrics.rs  mod.rs  node.rs  tunnel.rs
src-tauri/src/services/: config_store.rs  mod.rs  network_probe.rs  wireguard.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utils/: errors.rs  mod.rs  paths.rs  process.rs
src/app/providers/: README.md
src/app/router/: index.ts
src/components/cards/: MetricCard.vue
src/components/charts/: LatencyChart.vue
src/composables/: useNetworkTest.ts  useSettings.ts  useTunnel.ts
src/pages/: AdminPage.vue  GamesPage.vue  HistoryPage.vue  HomePage.vue  LandingPage.vue  LoginPage.vue  NodesPage.vue  RegisterPage.vue  SettingsPage.vue
src/services/: admin.service.ts  api.service.ts  auth.service.ts  config.service.ts  health.service.ts  latency.service.ts  node.service.ts  remote-config.service.ts  tauri.service.ts  tunnel.service.ts
src/store/: app.store.ts
src/styles/: main.css
src/types/: auth.ts  config.ts  game.ts  history.ts  metrics.ts  node.ts  tunnel.ts
src/utils/: defaults.ts  format.ts  score.ts  validation.ts
(+6 files in other folders)
