[package]
name = "flacofast"
version = "0.1.0"
description = "A lightweight WireGuard route optimizer for online games."
authors = ["FlacoFast"]
edition = "2021"

[lib]
name = "flacofast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
